WP-8617 Fixing banner title alignment

--- a/css/style.css
+++ b/css/style.css
@@ -11894,7 +11894,7 @@ button.checkbox-clear-all {
     line-height: 0;
     padding: 0 15px;
     position: relative;
-    top: -25px;
+    top: 20px;
   }
 }
 @media (max-width: 35.5em) {
@@ -11904,7 +11904,7 @@ button.checkbox-clear-all {
     line-height: 1;
     vertical-align: middle;
     width: 98%;
-    top: -44px;
+    top: 0;
   }
 }
 @media (max-width: 26.25em) {
